@@ -25,6 +25,9 @@
 	* Add premake4-related files to the dist build.
 
 2009-02-17 Stephen Sinclair <radarsat1@gmail.com>
+	* Don't attempt to dispatch data if TCP connection was closed.
+
+2009-02-17 Stephen Sinclair <radarsat1@gmail.com>
 	* For multicast, enable SO_REUSEPORT as well as SO_REUSEADDR. (Mike Wozniewski)
 
 2009-02-12 Stephen Sinclair <radarsat1@gmail.com>
